bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: not found: value asmile
   return ((asmile&&bsmile)||(!asmile)&&(!bsmile))
            ^MonkeyTrouble:3: error: not found: value bsmile
   return ((asmile&&bsmile)||(!asmile)&&(!bsmile))
                    ^MonkeyTrouble:3: error: not found: value asmile
   return ((asmile&&bsmile)||(!asmile)&&(!bsmile))
                               ^MonkeyTrouble:3: error: not found: value bsmile
   return ((asmile&&bsmile)||(!asmile)&&(!bsmile))
                                          ^